--- a/wp-content/themes/parai/style.css
+++ b/wp-content/themes/parai/style.css
@@ -1,108 +1,10 @@
 #map {
-  width: 100vw;
-  height: 100vh;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
   width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
+  height: calc(100vh - 120px) ;
 }
 
-.modal-content {
-  background-color: #fff;
-  margin: auto;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 90%;
-  height: 90%;
-  max-width: 1000px;
-  max-height: 700px;
-  overflow-y: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+.marker-window { max-width: 150px; }
+.marker-window h4{ font-size: small; padding:1em ;}
 
-.close {
-  color: #aaa;
-  font-size: 28px;
-  font-weight: bold;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.grid-item {
-  background-color: #f9f9f9;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.grid-item img,
-.grid-item video {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
-
-.modal-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.modal-header h2 {
-  margin: 0;
-}
-
-.modal-body {
-  max-height: 500px;
-  overflow-y: auto;
-}
-
-.modal-footer {
-  display: flex;
-  justify-content: flex-end;
-  padding-top: 20px;
-}
-
-.modal-footer a {
-  padding: 10px 20px;
-  background-color: #0073aa;
-  color: white;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: background-color 0.3s;
-}
-
-.modal-footer a:hover {
-  background-color: #005f8d;
-}
+.gm-style-iw-d, .gm-style-iw.gm-style-iw-c{margin: 0!important; padding: 0!important; overflow: hidden!important;}
+.gm-style-iw-chr{position: absolute; top: 0; left: 0; width: 100%;}
