--- a/wp-content/themes/parai/style.css
+++ b/wp-content/themes/parai/style.css
@@ -3,7 +3,7 @@
   height: calc(100vh - 120px) ;
 }
 
-.article_popup { max-width: 150px; }
+/* .article_popup { max-width: 150px; } */
 .article_popup h4{ font-size: small; padding:1em ;}
 
 .gm-style-iw-d, .gm-style-iw.gm-style-iw-c{margin: 0!important; padding: 0!important; overflow: hidden!important;}
